CSS fix; dropdown menus should have higher z-index

--- a/app/assets/stylesheets/commonwealth-vlr-engine/header.scss
+++ b/app/assets/stylesheets/commonwealth-vlr-engine/header.scss
@@ -161,6 +161,7 @@
 
       li.dropdown .dropdown-menu {
         margin: 0;
+        z-index: 1001; /* to cover twitter-typeahead in home page search bar */
 
         > li > a:hover {
           color:#FFFFFF;
